[workspace]
resolver = "2"

members = [
    "leptos-pavex",
    "leptos-pavex-macro"
]

[workspace.dependencies]
pavex =  { git="https://github.com/benwis/pavex" }
futures = "0.3.30"
url = "2.5.0"
bytes = "1.6.0"
leptos = {  git="https://github.com/leptos-rs/leptos", branch="leptos_0.7", features = ["ssr", "nonce"] }
leptos_integration_utils = { git="https://github.com/leptos-rs/leptos", branch="leptos_0.7" }
leptos_meta = { git="https://github.com/leptos-rs/leptos", branch="leptos_0.7", features = ["ssr"] }
leptos_router = {  git="https://github.com/leptos-rs/leptos", branch="leptos_0.7", features = ["ssr"] }
dashmap = "5.5.3"
once_cell = "1.19.0"
multimap = "0.10.0"
parking_lot = "0.12.3"
http-body-util = "0.1.2"
http-body = "1.0.0"
pin-project = "1"
hydration_context = { version = "0.1.0" }
reactive_graph = { git="https://github.com/leptos-rs/leptos", branch="leptos_0.7", features=["sandboxed-arenas"]}
