[workspace]
resolver = "2"

members = ["leptos-pavex", "leptos-pavex-macro"]

[workspace.dependencies]
pavex = { version = "0.1.43" }
futures = "0.3.30"
url = "2.5.0"
bytes = "1.6.0"
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7_sync", features = [
    "ssr",
    "nonce",
    "hydration",
] }
leptos_integration_utils = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7_sync" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7_sync", features = [
    "ssr",
] }
leptos_router = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7_sync", features = [
    "ssr",
] }
dashmap = "5.5.3"
once_cell = "1.19.0"
multimap = "0.10.0"
parking_lot = "0.12.3"
http-body-util = "0.1.2"
http-body = "1.0.0"
pin-project = "1"
hydration_context = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7_sync" }
server_fn = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7_sync", features = [
    "axum-no-default",
] }
reactive_graph = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7_sync", features = [
    "sandboxed-arenas",
    "hydration",
] }
futures-util = "0.3.30"
any_spawner = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
http-types = "2.12.0"
http = "1.1.0"
