[workspace]
resolver = "2"

members = ["leptos_pavex", "leptos_pavex_macro"]

[workspace.dependencies]
#pavex = { version = "0.1.43" }
#pavex = { git = "https://github.com/benwis/pavex" }

futures = "0.3.30"
url = "2.5.0"
bytes = "1.6.0"
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7", features = [
    "nonce",
    "hydration",
] }
leptos_integration_utils = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7", features = [
    "ssr",
] }
leptos_router = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7", features = [
    "ssr",
] }
dashmap = "5.5.3"
once_cell = "1.19.0"
multimap = "0.10.0"
parking_lot = "0.12.3"
http-body-util = "0.1.2"
http-body = "1.0.0"
pin-project = "1"
hydration_context = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7" }
reactive_graph = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7", features = [
    "sandboxed-arenas",
    "hydration",
] }
futures-util = "0.3.30"
any_spawner = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
http = "1.1.0"


# [patch."https://github.com/leptos-rs/leptos"]
# hydration_context = { path = "../leptos/hydration_context"}
# reactive_graph = { path="../leptos/reactive_graph"}
# leptos = { path = "../leptos/leptos"}
# server_fn = { path = "../leptos/server_fn"}
# leptos_integration_utils = {path = "../leptos/integrations/utils"}
# leptos_meta = { path = "../leptos/meta"}
# leptos_router = { path = "../leptos/router"}