[package]
name = "leptos-pavex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leptos = { version = "0.7.0-preview2", features = ["ssr"] }
leptos_integration_utils = { git="https://github.com/leptos-rs/leptos", branch="leptos_0.7" }
leptos_meta = { version = "0.7.0-preview2", features = ["ssr"] }
leptos_router = { version = "0.7.0-preview2", features = ["ssr"] }
futures.workspace = true
