[package]
name = "leptos-pavex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leptos.workspace=true 
leptos_integration_utils.workspace=true 
leptos_meta.workspace=true
leptos_router.workspace=true 
futures.workspace = true
url.workspace = true
bytes.workspace = true
pavex.workspace = true
dashmap.workspace = true
once_cell.workspace = true
multimap.workspace = true
tracing = "0.1.40"
parking_lot.workspace = true
http-body-util.workspace = true
http-body.workspace = true
pin-project.workspace = true
hydration_context.workspace = true
reactive_graph.workspace = true