[package]
name = "leptos_pavex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

leptos.workspace = true
leptos_integration_utils.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
futures.workspace = true
url.workspace = true
bytes.workspace = true
pavex = {version="0.1.44", default-features=false}
dashmap.workspace = true
once_cell.workspace = true
multimap.workspace = true
tracing = "0.1.40"
parking_lot.workspace = true
http-body-util.workspace = true
http-body.workspace = true
pin-project.workspace = true
hydration_context.workspace = true
reactive_graph.workspace = true
futures-util.workspace = true
any_spawner = { workspace = true}
serde.workspace = true
tokio = { version = "1", default-features = false, optional=true }
http-types = {version="2.12.0", optional=true}
http.workspace = true

[features]
nonce = ["leptos/nonce"]
wasm = []
ssr = ["dep:tokio","any_spawner/tokio", "leptos/ssr","dep:http-types"]
default=[]
