[package]
name = "leptos_pavex_macro"
version = "0.0.1"
edition = "2021"
description = "Pavex support for Leptos"
license = "Apache-2.0"
repository = "https://github.com/fermyon/leptos-spin"

[lib]
proc-macro = true

[dependencies]
http = "1.0.0"
proc-macro-error = "1.0.4"
server_fn_macro = {git="https://github.com/leptos-rs/leptos", branch="leptos_0.7"}
syn = "2.0.48"


[features]
nightly = ["server_fn_macro/nightly"]
ssr = ["server_fn_macro/ssr"]
actix = ["server_fn_macro/actix"]
axum = ["server_fn_macro/axum"]
