[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[lints.rust]
# `pavex_ide_hint` is used in Pavex's `f!` macro to "nudge" the IDE
# and force it to provide completions and "go-to-definition" correctly
# for the paths passed to the `f!` macro.
# It must be allowed in all local crates that use `f!`.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pavex_ide_hint)'] }

[dependencies]
cargo_px_env = "0.1"
pavex = { version = "0.1.43" }
pavex_tracing = { version = "0.1.43" }
pavex_cli_client = { version = "0.1.43" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
workspace_hack = { path = "../workspace_hack" }
leptos-pavex = { path = "../../../leptos-pavex" }
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7" }
leptos_meta = { git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7" }
leptos_app = { path = "../leptos_app" }
