[package]
name = "common"
description = "The common library for the leptos-ecommerce cookie store platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router = { workspace = true, optional = true }

app_errors = { path = "../app_errors" }
derive_builder.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
tokio = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
refinery = { workspace = true, optional = true }


[features]
default = []
hydrate = ["leptos/hydrate", "leptos_router"]
ssr = [
    "app_errors/ssr",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tokio",
    "dep:rusqlite",
    "dep:refinery",
]
