[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_app = { path = "../leptos_app", default-features = false, features = [
    "hydrate",
] }
common = { path = "../common", features=["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }

console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
wasm-bindgen = "=0.2.92"