[package]
name = "leptos_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
app_errors = { path = "../app_errors" }
camino = { workspace = true, optional=true }
rusqlite = { workspace = true, optional = true }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_pavex = {workspace = true, default-features=false}
leptos_pavex_macro.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "common/hydrate", "leptos_pavex/wasm"]

ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_pavex_macro/ssr",
    "dep:rusqlite",
    "dep:camino",
    "common/ssr",
]
